[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Bosses/normalAttack.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.0913, 32.0209 )

[node name="normalAttack" type="Area2D"]
position = Vector2( -317.48, 0 )
scale = Vector2( 10, 0.2 )
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="changeColor" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_normalAttack_area_entered"]
[connection signal="timeout" from="changeColor" to="." method="_on_changeColor_timeout"]
